# cpu-pipeline-simulator

./: .gitignore  CMakeLists.txt  README.md  necessary.txt  package-lock.json
include/: hazard.hpp  instr.hpp  metrics.hpp  pipeline.hpp  predictor.hpp  predictor_factory.hpp  trace_loader.hpp
scripts/: run.sh
src/: hazard.cpp  main.cpp  pipeline.cpp  predictor.cpp  predictor_factory.cpp  trace_loader.cpp
traces/: branch_demo.trace  sample.trace
ui-timeline/: index.html  package-lock.json  package.json  tailwind.config.js
ui-timeline/src/: App.jsx  index.css
